<resources>
    <string name="about_menu">About</string>
    <string name="advanced">Advanced</string>
    <string name="apps_text">&#160;apps</string>
    <string name="app_name">InstallerOpt</string>
    <string name="app_uninstalled">App was uninstalled</string>
    <string name="AppInfoPrefs">Application Info Preferences</string>
    <string name="AppInstPrefs">Application Install Preferences</string>
    <string name="applications_selected">&#160;application(s) selected</string>
    <string name="AppPrefs">Application Preferences</string>
    <string name="AppUninstPrefs">Application Uninstall Preferences</string>
    <string name="backup_delete_complete_message">Backup Deletion Completed Successfully</string>
    <string name="backup_delete_file_prepare_message">Preparing to delete files from backup location</string>
    <string name="backup_delete_menu">Delete Selected Backups</string>
    <string name="backup_file_date">\n\nFile backup date:\n</string>
    <string name="backup_file_md5">\n\nMD5 checksum:\n</string>
    <string name="backup_file_message">Backing up file*</string>
    <string name="backup_file_name">File Name:\n</string>
    <string name="backup_file_of_message">*of*</string>
    <string name="backup_file_prepare_message">Preparing to backup application(s) to backup location</string>
    <string name="backup_file_size">\n\nFile Size:\n</string>
    <string name="backup_file_title">File Info</string>
    <string name="backup_free">\nBackup folder free:</string>
    <string name="backup_installed_menu">Backup Installed Apps</string>
    <string name="backup_last_backed_up">\n\nLast backed up:\n</string>
    <string name="backup_location">Backup folder location:\n</string>
    <string name="backup_location_missing_message">Backup directory did not exist and was created, possibly deleted outside of InstallerOpt?</string>
    <string name="backup_menu">Backup</string>
    <string name="backup_restore_complete_message">Backup Restore Completed Successfully</string>
    <string name="backup_restore_file_prepare_message">Preparing to restore files from backup location</string>
    <string name="backup_restore_menu">Restore Selected Backups</string>
    <string name="backupprefs_menu">Backup preferences</string>
    <string name="current_version">Current version:</string>
    <string name="current_version_code">Current version code:</string>
    <string name="ExpertPrefs">Expert Preferences - PROCEED WITH CAUTION!</string>
    <string name="manage_menu">Manage Backups</string>
    <string name="MiscPrefs">Misc Preferences</string>
    <string name="new_version">New version:</string>
    <string name="new_version_code">New version code:</string>
    <string name="prefs_menu">Preferences</string>
    <string name="resetprefs_menu">Reset preferences</string>
    <string name="restoreprefs_menu">Restore preferences</string>
    <string name="share_menu">Share</string>
    <string name="sort_date_asc">Date - Oldest to Newest</string>
    <string name="sort_date_des">Date - Newest to Oldest</string>
    <string name="sort_menu">Sort</string>
    <string name="sort_name_asc">Name - A-Z</string>
    <string name="sort_name_des">Name - Z-A</string>
    <string name="sort_size_asc">Size - Smallest to Largest</string>
    <string name="sort_size_des">Size - Largest to Smallest</string>
    <string name="sort_status_asc">Status - Ascending</string>
    <string name="sort_status_des">Status - Descending</string>
    <string name="stats_menu">Backup Stats</string>
    <string name="disable_check_duplicated_permissions_summary">Ignore duplicate permissions declared by applications</string>
    <string name="disable_check_duplicated_permissions_title">Disable Duplicate Permissions Check</string>
    <string name="disable_check_permissions_summary">Allow installing applications without doing permission checks</string>
    <string name="disable_check_permissions_title">Disable Permission Checks</string>
    <string name="disable_check_sdk_version_summary">Always returns the latest version of the SDK</string>
    <string name="disable_check_sdk_version_title">Disable SDK Check</string>
    <string name="disable_install_background_summary">Disables installing applications in the background</string>
    <string name="disable_install_background_title">Disable Background Install</string>
    <string name="disable_install_shell_summary">Disables installing applications through shell</string>
    <string name="disable_install_shell_title">Disable Shell Install</string>
    <string name="disable_uninstall_background_summary">Disables uninstalling applications in the background</string>
    <string name="disable_uninstall_background_title">Disable Background Uninstall</string>
    <string name="disable_verify_apps_summary">Allow installing unverified applications</string>
    <string name="disable_verify_apps_title">Disable Application Verification</string>
    <string name="disable_verify_jar_summary">Mismatched certificates on JAR files will be allowed</string>
    <string name="disable_verify_jar_title">Disable JAR Verification</string>
    <string name="enable_app_storage_buttons_summary">Enables clear storage and data buttons prior to size calculation</string>
    <string name="enable_app_storage_buttons_title">Enable App Storage Buttons</string>
    <string name="enable_auto_close_install_summary">Automatically closes application installation window upon completion</string>
    <string name="enable_auto_close_install_title">Auto Install Close</string>
    <string name="enable_auto_close_install_vibrate_summary">Vibrates phone on install completion when using auto install options</string>
    <string name="enable_auto_close_install_vibrate_title">Auto Install Vibrate</string>
    <string name="enable_auto_close_uninstall_summary">Automatically closes uninstallation window when complete</string>
    <string name="enable_auto_close_uninstall_title">Auto Uninstall Close</string>
    <string name="enable_auto_hide_install_summary">Automatically hides installation window</string>
    <string name="enable_auto_hide_install_title">Auto Hide Install</string>
    <string name="enable_auto_install_launch_summary">Automatically launches application upon installation completion</string>
    <string name="enable_auto_install_launch_title">Auto Install Launch</string>
    <string name="enable_auto_install_summary">Automatically installs application without user interaction</string>
    <string name="enable_auto_install_title">Auto Install</string>
    <string name="enable_auto_uninstall_summary">Automatically uninstalls application without user interaction</string>
    <string name="enable_auto_uninstall_title">Auto Uninstall</string>
    <string name="enable_backup_apk_files_summary">Backs up APK files after install to user selected folder</string>
    <string name="enable_backup_apk_files_title">Backup APKs</string>
    <string name="enable_darkui_summary">Switches to dark theme</string>
    <string name="enable_darkui_title">Dark Theme</string>
    <string name="enable_debug_apps_summary">Enables debugging on all applications</string>
    <string name="enable_debug_apps_title">Debug Applications</string>
    <string name="enable_debug_summary">Enables additional logging for InstallerOpt</string>
    <string name="enable_debug_title">Debug</string>
    <string name="enable_delete_apk_files_summary">Delete APK files after install</string>
    <string name="enable_delete_apk_files_title">Delete APKs</string>
    <string name="enable_disable_sig_check_summary">Allow installing applications with mismatched signatures</string>
    <string name="enable_disable_sig_check_title">Disable Signature Checks</string>
    <string name="enable_disable_system_apps_summary">Enables system apps to be disabled, long click performs uninstall</string>
    <string name="enable_disable_system_apps_title">System Application State</string>
    <string name="enable_disable_user_apps_summary">Modifies uninstall button in application info to disable(turn off) application, long click performs uninstall</string>
    <string name="enable_disable_user_apps_title">Disable User Applications</string>
    <string name="enable_disable_verify_signatures_summary">Allow installing applications with unverified signatures</string>
    <string name="enable_disable_verify_signatures_title">Disable Signature Verification</string>
    <string name="enable_downgrade_apps_summary">Allow installing older versions of applications</string>
    <string name="enable_downgrade_apps_title">Downgrade Apps</string>
    <string name="enable_force_english_summary">Force english for this module regardless of current locale</string>
    <string name="enable_force_english_title">Force English</string>
    <string name="enable_hide_app_crashes_summary">Removes timeout applied to OK button of Force Close dialog</string>
    <string name="enable_hide_app_crashes_title">Disable FC Dialog Timeout</string>
    <string name="enable_hide_icon_summary">Uncheck to hide application icon from launcher</string>
    <string name="enable_hide_icon_title">Application Icon</string>
    <string name="enable_install_unknown_apps_summary">Allow unknown applications to be installed</string>
    <string name="enable_install_unknown_apps_title">Unknown Apps</string>
    <string name="enable_keep_apps_data_summary">App data is not deleted when application is uninstalled</string>
    <string name="enable_keep_apps_data_title">Keep App Data</string>
    <string name="enable_launch_app_summary">Click application icon when viewing application info to launch application</string>
    <string name="enable_launch_app_title">Icon Application Launch</string>
    <string name="enable_open_app_ops_summary">Opens App Ops after installation of application</string>
    <string name="enable_open_app_ops_title">Open App Ops</string>
    <string name="enable_package_name_summary">Click application name when viewing application info to see package name</string>
    <string name="enable_package_name_title">Package Name Display</string>
    <string name="enable_play_open_summary">Long click application icon when viewing application info to open in Playstore</string>
    <string name="enable_play_open_title">Open in Playstore</string>
    <string name="enable_show_buttons_summary">Allow buttons under toasts to be interacted with</string>
    <string name="enable_show_buttons_title">Show buttons</string>
    <string name="enable_uninstall_device_admin_summary">Enables the ability to uninstall applications set as device administrators</string>
    <string name="enable_uninstall_device_admin_title">Uninstall Device Admins</string>
    <string name="enable_uninstall_system_apps_summary">Enables the ability to uninstall system applications via long click</string>
    <string name="enable_uninstall_system_apps_title">Uninstall System Applications</string>
    <string name="enable_version_code_summary">Shows current and new version code of application prior to installing</string>
    <string name="enable_version_code_title">Version Code Display</string>
    <string name="enable_version_inline_summary">Shows version information inline with install dialog</string>
    <string name="enable_version_inline_title">Version Info Inline</string>
    <string name="enable_version_summary">Shows current and new version of application prior to installing</string>
    <string name="enable_version_title">Version Display</string>
    <string name="enable_version_toast_summary">Shows version information in a toast</string>
    <string name="enable_version_toast_title">Version Info Toast</string>
    <string name="external_sdcard_full_access_summary">Allows read/write to external SD Card(requires reboot)</string>
    <string name="external_sdcard_full_access_title">External SD Card Full Access</string>
</resources>