<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/stats"
        android:title="@string/manage_menu" />
    <item android:id="@+id/backup_installed_menu"
        android:title="@string/backup_installed_menu" />
    <item android:id="@+id/about"
        android:title="@string/about_menu" />
    <item android:id="@+id/prefs"
          android:title="@string/prefs_menu" >
        <menu>
            <item android:id="@+id/backupprefs"
                  android:title="@string/backupprefs_menu" />
            <item android:id="@+id/restoreprefs"
                  android:title="@string/restoreprefs_menu" />
            <item android:id="@+id/resetprefs"
                  android:title="@string/resetprefs_menu" />
        </menu>
    </item>
</menu>