<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app_version"
    android:background="@drawable/toast_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:columnCount="2"
    android:rowCount="5" >

    <TextView
        android:id="@+id/current_version_label"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="10dp"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:text="@string/current_version"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/current_version"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/new_version_label"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="10dp"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:text="@string/new_version"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/new_version"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/toast_spacer"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content" />

    <TextView
        android:id="@+id/current_version_code_label"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="10dp"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:text="@string/current_version_code"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/current_version_code"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/new_version_code_label"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="10dp"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:text="@string/new_version_code"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/new_version_code"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_width="wrap_content"
        android:textColor="@color/white" />

</GridLayout>
